--- a/README
+++ b/README
@@ -4,6 +4,8 @@
 ##  
 ##	Description:
 ##		python learning, leetcode & basics
+##		syntax-practicing URL:
+##			https://kh-coding.blogspot.com/p/python-46.html
 ##		
 ##	File structure:
 ##		./
